fdo#87110: xmloff: don't catch IllegalArgumentException here

There are at least 2 callers of InsertTextContent() that have
non-trivial catch handlers for this exception, which aren't called now.

(regression from bebf8ccfba37f77d6a43c7874249b31736467b17)

Change-Id: I085b710dfd5877e9b7e71610951543eddf6a6e46
(cherry picked from commit b86f5530161a417d31e28e75408ee80352fadad7)
Reviewed-on: https://gerrit.libreoffice.org/13425
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>